# frogmouth

./: README.md  pyproject.toml
frogmouth/app/: app.py
frogmouth/data/: bookmarks.py  config.py  data_directory.py  history.py  json_file.py
frogmouth/dialogs/: __init__.py  help_dialog.py  theme_dialog.py
frogmouth/screens/: main.py
frogmouth/widgets/: navigation.py  viewer.py
frogmouth/widgets/navigation_panes/: bookmarks.py  history.py
tests/: conftest.py  test_data.py  test_history_pane.py  test_layout.py  test_render_safety.py  test_startup.py  test_themes.py  test_viewer.py
