[tool.poetry]
name = "frogmouth"
homepage = "https://github.com/Textualize/frogmouth"
version = "0.9.2"
description = "A Markdown document viewer for the terminal"
authors = ["Dave Pearson <dave@textualize.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "frogmouth"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
textual = "^8.2.8"
typing-extensions = "^4.15.0"
httpx = "^0.28.1"
xdg = "^6.0.0"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.1"
mypy = "^1.1.1"
pylint = "^2.17.1"
pre-commit = "^3.2.1"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
frogmouth = "frogmouth.app.app:run"
